# doc-agent

./: .dockerignore  .env.example  Dockerfile  README.md  README_API.md  api.py  docker-compose.yaml  docker-compose.yml  main.py  ollama_file_chat.py  pyproject.toml  requirements.txt  test_api.py
